--- a/kitty/.config/kitty/user_opts.conf
+++ b/kitty/.config/kitty/user_opts.conf
@@ -1,7 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
-  font_family               Operator Mono Book
+  font_family               Monaspace Neon Var
   font_size                 12
   modify_font baseline      0
   modify_font cell_height   2px
