--- a/kitty/.config/kitty/user_opts.conf
+++ b/kitty/.config/kitty/user_opts.conf
@@ -1,8 +1,8 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
-  font_family               Monaspace Neon Var
-  font_size                 12
+  font_family               Monaspace Argon
+  font_size                 13
   modify_font baseline      0
   modify_font cell_height   2px
   modify_font cell_width    2px
