Updated theme and font

--- a/kitty/.config/kitty/user_opts.conf
+++ b/kitty/.config/kitty/user_opts.conf
@@ -1,7 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
-  font_family               Hack Nerd Font Mono
+  font_family               Go Mono
   font_size                 13
   modify_font baseline      0
   modify_font cell_height   2px
@@ -34,5 +34,5 @@
 #: Color Scheme {{{
   background_opacity          0.96
   dynamic_background_opacity  yes
-  include ./Royal.conf
+  include ./Gruvbox Light Soft.conf
 #: }}}
