--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -33,7 +33,8 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'light'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run '~/.tmux/plugins/tpm/tpm'
