--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -33,8 +33,9 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'light'
+set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins "cpu-usage gpu-usage ram-usage battery synchronize-panes"
+set -g @dracula-border-contrast false
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run '~/.tmux/plugins/tpm/tpm'
