--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -29,13 +29,12 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
-set -g window-status-current-style "#I"
-set -g window-status-style "#I"
-
+set -g status-right ''
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'maxpetretta/tmux-monokai-pro'
 
 run '~/.tmux/plugins/tpm/tpm'
