--- a/kitty/.config/kitty/user_opts.conf
+++ b/kitty/.config/kitty/user_opts.conf
@@ -34,5 +34,5 @@
 #: Color Scheme {{{
   background_opacity          0.96
   dynamic_background_opacity  yes
-  include ./Birds Of Paradise.conf
+  include ./Nord.conf
 #: }}}
