--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -35,6 +35,6 @@ set -g status-right ''
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'maxpetretta/tmux-monokai-pro'
+set -g @plugin "janoamaral/tokyo-night-tmux"
 
 run '~/.tmux/plugins/tpm/tpm'
