--- a/kitty/.config/kitty/user_opts.conf
+++ b/kitty/.config/kitty/user_opts.conf
@@ -33,5 +33,5 @@
 
 #: Color Scheme {{{
   background_opacity          1
-  include ./Catppuccin-Mocha.conf 
+  include  ./Dimmed Monokai.conf
 #: }}}
