Fix colors not showing properly in tmux mode

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # Colors
 set -g default-terminal "screen-256color"
+set -sg terminal-overrides ",*:RGB"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Window number 
@@ -43,9 +44,14 @@ set -g status-right ''
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @nord_tmux_no_patched_font "1"
+set -g @dracula-plugins "ssh-session time"
+set -g @dracula-show-powerline false
+set -g @dracula-show-timezone false
+set -g @dracula-day-month true
+set -g @dracula-military-time true
+set -g @dracula-time-format "%F %R"
 
 run '~/.tmux/plugins/tpm/tpm'
