--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -47,6 +47,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+set -g @dracula-show-left-icon session
 set -g @dracula-plugins "ssh-session time"
 set -g @dracula-show-powerline false
 set -g @dracula-show-timezone false
