--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -44,15 +44,7 @@ set -g status-right ''
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dracula/tmux'
+set -g @plugin 'arcticicestudio/nord-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
-
-set -g @dracula-show-left-icon session
-set -g @dracula-plugins "ssh-session time"
-set -g @dracula-show-powerline false
-set -g @dracula-show-timezone false
-set -g @dracula-day-month true
-set -g @dracula-military-time true
-set -g @dracula-time-format "%F %R"
 
 run '~/.tmux/plugins/tpm/tpm'
