--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -44,8 +44,9 @@ bind-key C-a send-prefix
  set -g @plugin 'tmux-plugins/tpm'
  set -g @plugin 'tmux-plugins/tmux-sensible'
  set -g @plugin 'christoomey/vim-tmux-navigator'
- set -g @plugin 'seebi/tmux-colors-solarized'
  set -g @plugin 'tmux-plugins/tmux-yank'
+ set -g @plugin 'tmux-plugins/tmux-resurrect'
+ set -g @plugin 'tmux-plugins/tmux-continuum'
 
- run '~/.tmux/plugins/tpm/tpm'
+ run '~/.local/tmux/plugins/tpm'
 
