--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -47,6 +47,7 @@ bind-key C-a send-prefix
  set -g @plugin 'tmux-plugins/tmux-yank'
  set -g @plugin 'tmux-plugins/tmux-resurrect'
  set -g @plugin 'tmux-plugins/tmux-continuum'
+ set -g @plugin 'niksingh710/minimal-tmux-status'
 
- run '~/.local/tmux/plugins/tpm'
+ run '~/.local//share/.tmux/plugins/tpm/tpm'
 
