--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,40 +14,45 @@ set-option -g prefix C-a
 unbind-key C-a
 bind-key C-a send-prefix
  
- # Use Vim shortcuts
- setw -g mode-keys vi
- # Mouse mode
- setw -g mouse on
+# Use Vim shortcuts
+setw -g mode-keys vi
+# Mouse mode
+setw -g mouse on
 
- # Shift Alt vim keys to switch windows
- bind -n M-H previous-window
- bind -n M-L next-window
+# Shift Alt vim keys to switch windows
+bind -n M-H previous-window
+bind -n M-L next-window
 
- # Better pane creation
- unbind %
- bind | split-window -h -c "#{pane_current_path}"
+# Better pane creation
+unbind %
+bind | split-window -h -c "#{pane_current_path}"
 
- unbind '"'
- bind - split-window -v -c "#{pane_current_path}"
+unbind '"'
+bind - split-window -v -c "#{pane_current_path}"
 
- # set vi mode 
- set-window-option -g mode-keys vi
+# set vi mode 
+set-window-option -g mode-keys vi
 
- # set vim like keybindings for copying
- bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
- bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
- bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+# set vim like keybindings for copying
+bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
- set -g status-right ''
+set -g status-right ''
 
- # List of plugins
- set -g @plugin 'tmux-plugins/tpm'
- set -g @plugin 'tmux-plugins/tmux-sensible'
- set -g @plugin 'christoomey/vim-tmux-navigator'
- set -g @plugin 'tmux-plugins/tmux-yank'
- set -g @plugin 'tmux-plugins/tmux-resurrect'
- set -g @plugin 'tmux-plugins/tmux-continuum'
- set -g @plugin 'niksingh710/minimal-tmux-status'
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 
- run '~/.local//share/.tmux/plugins/tpm/tpm'
+# set -g @minimal-tmux-bg "#${config.stylix.base16Scheme.base01}" (or you can use it with pywal)
+set -g @minimal-tmux-use-arrow true
+set -g @minimal-tmux-right-arrow ""
+set -g @minimal-tmux-left-arrow ""
+
+run '~/.local//share/.tmux/plugins/tpm/tpm'
 
