--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,6 +3,8 @@ set -g default-terminal "screen-256color"
 set -sg terminal-overrides ",*:RGB"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
+set -g set-clipboard on
+
 # Window number 
 set -g base-index 1
 set -g pane-base-index 1
@@ -30,8 +32,8 @@ bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
-# set vi mode 
 set-window-option -g mode-keys vi
+set -g set-clipboard on
 
 # set vim like keybindings for copying
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
