Add more workspaces

--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -144,6 +144,11 @@ alt-3 = 'workspace 3'
 alt-4 = 'workspace 4'
 alt-5 = 'workspace 5'
 alt-6 = 'workspace 6'
+alt-7 = 'workspace 7'
+alt-8 = 'workspace 8'
+alt-9 = 'workspace 9'
+alt-0 = 'workspace 0'
+
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 alt-shift-1 = 'move-node-to-workspace 1 --focus-follows-window'
@@ -152,6 +157,11 @@ alt-shift-3 = 'move-node-to-workspace 3 --focus-follows-window'
 alt-shift-4 = 'move-node-to-workspace 4 --focus-follows-window'
 alt-shift-5 = 'move-node-to-workspace 5 --focus-follows-window'
 alt-shift-6 = 'move-node-to-workspace 6 --focus-follows-window'
+alt-shift-7 = 'move-node-to-workspace 7 --focus-follows-window'
+alt-shift-8 = 'move-node-to-workspace 8 --focus-follows-window'
+alt-shift-9 = 'move-node-to-workspace 9 --focus-follows-window'
+alt-shift-0 = 'move-node-to-workspace 0 --focus-follows-window'
+
 
 alt-tab = 'workspace-back-and-forth'
 alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
@@ -187,6 +197,10 @@ alt-p = ['exec-and-forget open -a /Applications/Orbstack.app', 'mode main']
 1 = '^Built-in Retina Display$'
 2 = '^Built-in Retina Display$'
 3 = '^Built-in Retina Display$'
-4 = '^Studio Display$'
-5 = '^Studio Display$'
+4 = '^Built-in Retina Display$'
+5 = '^Built-in Retina Display$'
 6 = '^Studio Display$'
+7 = '^Studio Display$'
+8 = '^Studio Display$'
+9 = '^Studio Display$'
+0 = '^Studio Display$'
