--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -8,12 +8,12 @@
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
   "agent": {
+    "default_profile": "ask",
     "model_parameters": [],
     "default_model": {
       "provider": "google",
-      "model": "gemini-1.5-flash"
-    },
-    "version": "2"
+      "model": "gemini-2.5-pro"
+    }
   },
   "diagnostics": {
     "inline": {
