Update zshrc and bashrc

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -56,5 +56,5 @@ set -g @minimal-tmux-use-arrow true
 set -g @minimal-tmux-right-arrow ""
 set -g @minimal-tmux-left-arrow ""
 
-run '~/.local//share/.tmux/plugins/tpm/tpm'
+run '~/.local/share/.tmux/plugins/tpm/tpm'
 
